# multimodal-accelerator

./: .gitignore  00_setup.py  01_ingest.py  02_convert.py  02_docling_hack.py  02_extract.py  02_extract_volo.py  02a_convert_docling.py  02b_convert_databricks.py  02b_convert_markitdown.py  02b_convert_unstructured.py  02c_convert_databricks.py  03_feature.py  03_featurize.py  04_agent_inference.py  04_inference.py  04a_inference_langgraph.py  04b_inference_openai.py  04b_inference_pyfunc.py  04c_inference_openai.py  04c_inference_pyfunc.py  05_interface.py  06_extend.py  CICD.md  README.md  RUNME.md  config.yml  databricks.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.gradio/flagged/: dataset1.csv
data/messages/: input_examples.py
documentation/: docling.md  gen_ai.md  langgraph.md  mlflow.md  unstructured.md
fixtures/: maintenance_documents.csv
maud/: document.py  meta_parsers.py  retrievers.py
maud/agent/: config.py  nodes.py  prompts.py  retrievers.py  state.py  states.py  utils.py
maud/agents/: config.py  nodes.py  retrievers.py
maud/config/: __init__.py  agent_config.yaml  app_llm_config.yaml  utils.py
maud/doc_analysis/: converters.py  extensions.py  metadata.py
notebooks/: docling_local.ipynb  graph_deploy_chain_batch.py  graph_deploy_pyfunc_stream.py  interface_config.ipynb  langgraph_agent.ipynb  langgraph_basics.ipynb  openai_agent.ipynb
resources/: dbmma_job.yml  maid_job.yml
scripts/: export_requirements.py
tests/: main_test.py  test_agent_functions.py  test_document_converters.py  test_utils.py
(+63 files in other folders)
